@@ -167,7 +167,14 @@ foreach my $db_type (qw(pg mysql informix sqlite))
         $value .= '        '; # MySQL < 5 seems to mess up CHAR fields
       }
 
-      ok($value =~ /^\+?$Default{$n}$/, "check default $def 1 - $db_type");
+      if(defined $Default{$n})
+      {
+        ok($value =~ /^\+?$Default{$n}$/, "check default $def 1 - $db_type");
+      }
+      else
+      {
+        is($value, $Default{$n}, "check default $def 1 - $db_type");
+      }
     }
 
     if($n == 14 && $db_type eq 'pg')
